--- a/client/public/index.html
+++ b/client/public/index.html
@@ -28,6 +28,9 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <video autoplay muted loop id="myVideo">
+      <source src="background.mp4" type="video/mp4">
+    </video>
     <div id="root"></div>
     <!--
       This HTML file is a template.
